--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,1 @@
-{"name":"Portfolio","short_name":"Portfolio","start_url":"/","display":"standalone","theme_color":"#ffffff","background_color":"#ffffff","icons":[{"src":"assets/icons/512x512.png","sizes":"512x512","type":"image/png"}]}
+{"name":"KR.X","short_name":"KR.X","start_url":"/","display":"standalone","theme_color":"#ffffff","background_color":"#ffffff","icons":[{"src":"assets/icons/512x512.png","sizes":"512x512","type":"image/png"}]}
